Expose `output-file` as an output when `advanced-security: true` (#87)
Co-authored-by: Lachlan Kidson <lachlan.kidson@skyscanner.net>
Co-authored-by: William Woodruff <william@yossarian.net>

--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,11 @@ branding:
   icon: "shield"
   color: "blue"
 
+outputs:
+  output-file:
+    description: Filepath to static analysis results in SARIF format"
+    value: ${{ steps.run-zizmor.outputs.sarif-file }}
+
 inputs:
   inputs:
     description: |
